manifests/argocd/overlays/kind/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
     httpsRedirect: true
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     credentialName: argocd-server-tls
  #     maxProtocolVersion: TLSV1_3
  #     minProtocolVersion: TLSV1_2
  #     mode: SIMPLE
  #     cipherSuites:
  #       - ECDHE-ECDSA-AES128-GCM-SHA256
  #       - ECDHE-RSA-AES128-GCM-SHA256
  #       - ECDHE-ECDSA-AES128-SHA
  #       - AES128-GCM-SHA256
  #       - AES128-SHA
  #       - ECDHE-ECDSA-AES256-GCM-SHA384
  #       - ECDHE-RSA-AES256-GCM-SHA384
  #       - ECDHE-ECDSA-AES256-SHA
  #       - AES256-GCM-SHA384
  #       - AES256-SHA
